--- a/components/ui/Grid/Grid.module.css
+++ b/components/ui/Grid/Grid.module.css
@@ -15,7 +15,7 @@
     @apply p-6;
 
     grid-template-columns: 1fr minmax(200px, 30%);
-    grid-template-rows: auto;
+    grid-template-rows: auto 1fr;
     grid-template-areas:
       "header header"
       "content right";
