--- a/pages/scrollbar.css
+++ b/pages/scrollbar.css
@@ -33,16 +33,20 @@
 
   ::-webkit-scrollbar-track:active {
     background-color: rgba(255, 255, 255, 0.1);
-    -webkit-box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.14),
+    -webkit-box-shadow:
+      inset 1px 0 0 rgba(0, 0, 0, 0.14),
       inset -1px 0 0 rgba(0, 0, 0, 0.07);
-    box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.14),
+    box-shadow:
+      inset 1px 0 0 rgba(0, 0, 0, 0.14),
       inset -1px 0 0 rgba(0, 0, 0, 0.07);
   }
 
   ::-webkit-scrollbar-track:horizontal:active {
-    -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.14),
+    -webkit-box-shadow:
+      inset 0 1px 0 rgba(0, 0, 0, 0.14),
       inset 0 -1px 0 rgba(0, 0, 0, 0.07);
-    box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.14),
+    box-shadow:
+      inset 0 1px 0 rgba(0, 0, 0, 0.14),
       inset 0 -1px 0 rgba(0, 0, 0, 0.07);
   }
 
@@ -53,18 +57,22 @@
     border-width: 1px 1px 1px 6px;
     min-height: 28px;
     padding: 100px 0 0;
-    -webkit-box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1),
+    -webkit-box-shadow:
+      inset 1px 1px 0 rgba(0, 0, 0, 0.1),
       inset 0 -1px 0 rgba(0, 0, 0, 0.07);
-    box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1),
+    box-shadow:
+      inset 1px 1px 0 rgba(0, 0, 0, 0.1),
       inset 0 -1px 0 rgba(0, 0, 0, 0.07);
   }
 
   ::-webkit-scrollbar-thumb:horizontal {
     border-width: 6px 1px 1px;
     padding: 0 0 0 100px;
-    -webkit-box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1),
+    -webkit-box-shadow:
+      inset 1px 1px 0 rgba(0, 0, 0, 0.1),
       inset -1px 0 0 rgba(0, 0, 0, 0.07);
-    box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1),
+    box-shadow:
+      inset 1px 1px 0 rgba(0, 0, 0, 0.1),
       inset -1px 0 0 rgba(0, 0, 0, 0.07);
   }
 
@@ -96,17 +104,21 @@
     background-clip: padding-box;
     background-color: #202124;
     border-width: 0;
-    -webkit-box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.14),
+    -webkit-box-shadow:
+      inset 1px 0 0 rgba(0, 0, 0, 0.14),
       inset -1px 0 0 rgba(0, 0, 0, 0.07);
-    box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.14),
+    box-shadow:
+      inset 1px 0 0 rgba(0, 0, 0, 0.14),
       inset -1px 0 0 rgba(0, 0, 0, 0.07);
   }
 
   body::-webkit-scrollbar-track-piece:horizontal {
     border-width: 3px 0 0;
-    -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.14),
+    -webkit-box-shadow:
+      inset 0 1px 0 rgba(0, 0, 0, 0.14),
       inset 0 -1px 0 rgba(0, 0, 0, 0.07);
-    box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.14),
+    box-shadow:
+      inset 0 1px 0 rgba(0, 0, 0, 0.14),
       inset 0 -1px 0 rgba(0, 0, 0, 0.07);
   }
 
